Fixed Travis builds

--- a/.travis.yml
+++ b/.travis.yml
@@ -68,7 +68,7 @@ before_script:
   - sh -c "mkdir -p $HOME/downloads"
   - sh -c "cd $HOME/downloads"
   - wget "https://cran.r-project.org/src/contrib/Archive/gtools/gtools_3.4.1.tar.gz" -O "$HOME/downloads/gtools_3.4.1.tar.gz"
-  - sudo Rscript -e 'if(!"gtools" %in% rownames(installed.packages())) { install.packages("$HOME/downloads/gtools_3.4.1.tar.gz", repo = NULL, type="source") }'
+  - sudo Rscript -e 'if(!"gtools" %in% rownames(installed.packages())) { install.packages("gtools_3.4.1.tar.gz", repo = NULL, type="source") }'
   - sh -c "if [ ! -f \"$HOME/downloads/gdata_2.13.3.tar.gz\" ]; then wget \"https://cran.r-project.org/src/contrib/Archive/gdata/gdata_2.13.3.tar.gz\" -O \"$HOME/downloads/gdata_2.13.3.tar.gz\"; fi"
   - sudo Rscript -e 'if(!"gdata" %in% rownames(installed.packages())) { install.packages("$HOME/downloads/gdata_2.13.3.tar.gz", repo = NULL, type="source") }'
   - sh -c "if [ ! -f \"$HOME/downloads/bitops_1.0-6.tar.gz\" ]; then wget -c \"https://cran.r-project.org/src/contrib/bitops_1.0-6.tar.gz\" -O \"$HOME/downloads/bitops_1.0-6.tar.gz\"; fi"
