--- a/.travis.yml
+++ b/.travis.yml
@@ -16,8 +16,6 @@ env:
 
 matrix:
   allow_failures:
-    - php: 7.2
-
     - php: 5.5
       env:
         - LINTR=1
@@ -52,6 +50,9 @@ matrix:
     - php: 7.2
       env:
         - PHPUNIT=5.7.19
+
+  exclude:
+    - php: 7.2
 
 cache:
   directories:
