--- a/composer.json
+++ b/composer.json
@@ -53,8 +53,7 @@
 		"cakephp/debug_kit": "2.2.*",
 		"slywalker/twitter_bootstrap": "1.5.7",
 		"htmlawed/htmlawed": "1.1.*",
-		"nlware/rserve-php": "dev-master",
-		"simplesamlphp/simplesamlphp": "^1.16"
+		"nlware/rserve-php": "dev-master"
 	},
 	"require-dev": {
 		"phpunit/phpunit": "^3.7",
