--- a/.travis.yml
+++ b/.travis.yml
@@ -126,7 +126,7 @@ before_script:
 script:
   - sh -c "if [ '$COVERALLS' = 1 ]; then cd $TRAVIS_BUILD_DIR/app; Vendor/bin/cake test app All --stderr --coverage-clover ../build/logs/clover.xml --configuration ../phpunit.xml; fi;"
   - sh -c "if [ '$PHPCS' = '1' ]; then cd $TRAVIS_BUILD_DIR/app; Vendor/bin/phpcs -p --extensions=php --standard=CakePHP --ignore=Plugin --ignore=Vendor --ignore=webroot/js/ckeditor -n $TRAVIS_BUILD_DIR; fi;"
-  - sh -c "if [ '$PHPCS' != '1' ] && [ '$COVERALLS' != 1 ] && [ '$LINTR' != 1 ]; then cd $TRAVIS_BUILD_DIR/app; Vendor/bin/cake test app All --stderr; fi"
+  - sh -c "if [ '$PHPCS' != '1' ] && [ '$COVERALLS' != 1 ] && [ '$LINTR' != 1 ]; then cd $TRAVIS_BUILD_DIR/app; Vendor/bin/cake test app AllTests --stderr; fi"
   - sh -c "if [ '$LINTR' = '1' ]; then cd $TRAVIS_BUILD_DIR/app; ./bin/travis-linter.sh; fi"
 after_success:
   - sh -c "if [ '$COVERALLS' = '1' ]; then cd $TRAVIS_BUILD_DIR; php app/Vendor/bin/coveralls -c .coveralls.yml -v; fi"
