--- a/composer.json
+++ b/composer.json
@@ -58,7 +58,6 @@
 	},
 	"require-dev": {
 		"phpunit/phpunit": "^3.7",
-		"cakephp/cakephp-codesniffer": "1.*",
-		"satooshi/php-coveralls": "v1.0.1"
+		"cakephp/cakephp-codesniffer": "1.*"
 	}
 }
