Fix PHPUnit 5.7.19 builds (#66)

--- a/.travis.yml
+++ b/.travis.yml
@@ -21,14 +21,6 @@ matrix:
         - LINTR=1
           LINTR_COMMENT_BOT=false
 
-    - php: 7.1
-      env:
-        - PHPUNIT=5.7.19
-
-    - php: 7.2
-      env:
-        - PHPUNIT=5.7.19
-
   include:
     - php: 5.5
       env:
@@ -117,6 +109,8 @@ before_script:
   - sudo R CMD Rserve
   - sh -c "mysql -e 'CREATE DATABASE qdnatool_test;'"
   - chmod -R 777 ./app/tmp
+  - sh -c "if [ '$COVERALLS' = '1' ]; then composer require \"satooshi/php-coveralls=v1.0.1\"; fi"
+  - sh -c "if [ '$PHPUNIT' != '3.7.33' ]; then composer remove --dev \"phpunit/phpunit\"; fi"
   - composer require "phpunit/phpunit=$PHPUNIT"
   - sh -c "if [ '$PHPCS' = '1' ]; then cd $TRAVIS_BUILD_DIR/app; Vendor/bin/phpcs --config-set installed_paths Vendor/cakephp/cakephp-codesniffer; fi"
   - phpenv rehash
