--- a/.travis.yml
+++ b/.travis.yml
@@ -14,6 +14,7 @@ php:
 env:
   global:
     - PHPUNIT=3.7.33
+      R=3.0.2
 
 matrix:
   allow_failures:
@@ -31,6 +32,7 @@ matrix:
       env:
         - LINTR=1
           LINTR_COMMENT_BOT=false
+          R=3.4
 
     - php: 7.0
       env:
@@ -58,56 +60,57 @@ cache:
     - $HOME/downloads
 
 before_script:
+
+  - sudo sh -c "if [ '$R' = '3.4' ]; then apt-key adv --keyserver keyserver.ubuntu.com --recv E084DAB9; fi"
+  - sudo sh -c "if [ '$R' = '3.4' ]; then add-apt-repository 'deb https://cloud.r-project.org/bin/linux/ubuntu trusty/' -y; fi"
   - sudo apt-get install -y --force-yes r-base r-cran-rserve
   - sudo apt-get install -y --force-yes libcurl4-gnutls-dev
   - sudo apt-get install -y --force-yes libxml2-dev
   - sudo mkdir -p ~/R/Library
   - sudo echo 'R_LIBS=~/R/Library' > ~/.Renviron
   - sudo echo 'options(repos = "https://cran.rstudio.com")' > ~/.Rprofile
-  - sh -c "wget \"https://cran.r-project.org/src/contrib/Archive/gtools/gtools_3.4.1.tar.gz\" -O \"gtools_3.4.1.tar.gz\""
-  - sudo Rscript -e 'if(!"gtools" %in% rownames(installed.packages())) { install.packages("gtools_3.4.1.tar.gz", repo = NULL, type="source") }'
-  - sh -c "wget \"https://cran.r-project.org/src/contrib/Archive/gdata/gdata_2.13.3.tar.gz\" -O \"gdata_2.13.3.tar.gz\""
-  - sudo Rscript -e 'if(!"gdata" %in% rownames(installed.packages())) { install.packages("gdata_2.13.3.tar.gz", repo = NULL, type="source") }'
-  - sh -c "wget -c \"https://cran.r-project.org/src/contrib/bitops_1.0-6.tar.gz\" -O \"bitops_1.0-6.tar.gz\""
-  - sudo Rscript -e 'if(!"bitops" %in% rownames(installed.packages())) { install.packages("bitops_1.0-6.tar.gz", repo = NULL, type="source") }'
-  - sh -c "wget -c \"https://cran.r-project.org/src/contrib/Archive/caTools/caTools_1.17.tar.gz\" -O \"caTools_1.17.tar.gz\""
-  - sudo Rscript -e 'if(!"caTools" %in% rownames(installed.packages())) { install.packages("caTools_1.17.tar.gz", repo = NULL, type="source") }'
-  - sh -c "wget -c \"https://cran.r-project.org/src/contrib/Archive/gplots/gplots_2.14.1.tar.gz\" -O \"gplots_2.14.1.tar.gz\""
-  - sudo Rscript -e 'if(!"gplots" %in% rownames(installed.packages())) { install.packages("gplots_2.14.1.tar.gz", repo = NULL, type="source") }'
-  - sh -c "wget -c \"https://cran.r-project.org/src/contrib/Archive/Rcpp/Rcpp_0.11.2.tar.gz\" -O \"Rcpp_0.11.2.tar.gz\""
-  - sudo Rscript -e 'if(!"Rcpp" %in% rownames(installed.packages())) { install.packages("Rcpp_0.11.2.tar.gz", repo = NULL, type="source") }'
-  - sh -c "wget -c \"https://cran.r-project.org/src/contrib/Archive/plyr/plyr_1.8.1.tar.gz\" -O \"plyr_1.8.1.tar.gz\""
-  - sudo Rscript -e 'if(!"plyr" %in% rownames(installed.packages())) { install.packages("plyr_1.8.1.tar.gz", repo = NULL, type="source") }'
-  - sh -c "wget -c \"https://cran.r-project.org/src/contrib/Archive/digest/digest_0.6.4.tar.gz\" -O \"digest_0.6.4.tar.gz\""
-  - sudo Rscript -e 'if(!"digest" %in% rownames(installed.packages())) { install.packages("digest_0.6.4.tar.gz", repo = NULL, type="source") }'
-  - sh -c "wget -c \"https://cran.r-project.org/src/contrib/Archive/gtable/gtable_0.1.2.tar.gz\" -O \"gtable_0.1.2.tar.gz\""
-  - sudo Rscript -e 'if(!"gtable" %in% rownames(installed.packages())) { install.packages("gtable_0.1.2.tar.gz", repo = NULL, type="source") }'
-  - sh -c "wget -c \"https://cran.r-project.org/src/contrib/Archive/stringr/stringr_0.6.2.tar.gz\" -O \"stringr_0.6.2.tar.gz\""
-  - sudo Rscript -e 'if(!"stringr" %in% rownames(installed.packages())) { install.packages("stringr_0.6.2.tar.gz", repo = NULL, type="source") }'
-  - sh -c "wget -c \"https://cran.r-project.org/src/contrib/Archive/reshape2/reshape2_1.4.tar.gz\" -O \"reshape2_1.4.tar.gz\""
-  - sudo Rscript -e 'if(!"reshape2" %in% rownames(installed.packages())) { install.packages("reshape2_1.4.tar.gz", repo = NULL, type="source") }'
-  - sh -c "wget -c \"https://cran.r-project.org/src/contrib/Archive/RColorBrewer/RColorBrewer_1.0-5.tar.gz\" -O \"RColorBrewer_1.0-5.tar.gz\""
-  - sudo Rscript -e 'if(!"RColorBrewer" %in% rownames(installed.packages())) { install.packages("RColorBrewer_1.0-5.tar.gz", repo = NULL, type="source") }'
-  - sh -c "wget -c \"https://cran.r-project.org/src/contrib/dichromat_2.0-0.tar.gz\" -O \"dichromat_2.0-0.tar.gz\""
-  - sudo Rscript -e 'if(!"dichromat" %in% rownames(installed.packages())) { install.packages("dichromat_2.0-0.tar.gz", repo = NULL, type="source") }'
-  - sh -c "wget -c \"https://cran.r-project.org/src/contrib/Archive/colorspace/colorspace_1.2-4.tar.gz\" -O \"colorspace_1.2-4.tar.gz\""
-  - sudo Rscript -e 'if(!"colorspace" %in% rownames(installed.packages())) { install.packages("colorspace_1.2-4.tar.gz", repo = NULL, type="source") }'
-  - sh -c "wget -c \"https://cran.r-project.org/src/contrib/Archive/munsell/munsell_0.4.2.tar.gz\" -O \"munsell_0.4.2.tar.gz\""
-  - sudo Rscript -e 'if(!"munsell" %in% rownames(installed.packages())) { install.packages("munsell_0.4.2.tar.gz", repo = NULL, type="source") }'
-  - sh -c "wget -c \"https://cran.r-project.org/src/contrib/Archive/labeling/labeling_0.2.tar.gz\" -O \"labeling_0.2.tar.gz\""
-  - sudo Rscript -e 'if(!"labeling" %in% rownames(installed.packages())) { install.packages("labeling_0.2.tar.gz", repo = NULL, type="source") }'
-  - sh -c "wget -c \"https://cran.r-project.org/src/contrib/Archive/scales/scales_0.2.4.tar.gz\" -O \"scales_0.2.4.tar.gz\""
-  - sudo Rscript -e 'if(!"scales" %in% rownames(installed.packages())) { install.packages("scales_0.2.4.tar.gz", repo = NULL, type="source") }'
-  - sh -c "wget -c \"https://cran.r-project.org/src/contrib/Archive/proto/proto_0.3-10.tar.gz\" -O \"proto_0.3-10.tar.gz\""
-  - sudo Rscript -e 'if(!"proto" %in% rownames(installed.packages())) { install.packages("proto_0.3-10.tar.gz", repo = NULL, type="source") }'
-  - sh -c "wget -c \"https://cran.r-project.org/src/contrib/Archive/ggplot2/ggplot2_1.0.0.tar.gz\" -O \"ggplot2_1.0.0.tar.gz\""
-  - sudo Rscript -e 'if(!"ggplot2" %in% rownames(installed.packages())) { install.packages("ggplot2_1.0.0.tar.gz", repo = NULL, type="source") }'
-  - sh -c "wget -c \"https://cran.r-project.org/src/contrib/Archive/gridExtra/gridExtra_0.9.1.tar.gz\" -O \"gridExtra_0.9.1.tar.gz\""
-  - sudo Rscript -e 'if(!"gridExtra" %in% rownames(installed.packages())) { install.packages("gridExtra_0.9.1.tar.gz", repo = NULL, type="source") }'
-  - sh -c "wget -c \"https://cran.r-project.org/src/contrib/psy_1.1.tar.gz\" -O \"psy_1.1.tar.gz\""
-  - sudo Rscript -e 'if(!"psy" %in% rownames(installed.packages())) { install.packages("psy_1.1.tar.gz", repo = NULL, type="source") }'
-  - sh -c "wget -c \"https://cran.r-project.org/src/contrib/Archive/lintr/lintr_0.2.0.tar.gz\" -O \"lintr_0.2.0.tar.gz\""
-  - sudo Rscript -e 'if(!"lintr" %in% rownames(installed.packages())) { install.packages("lintr_0.2.0.tar.gz", repo = NULL, type="source") }'
+  - sh -c "if [ '$R' = '3.0.2' ]; then wget \"https://cran.r-project.org/src/contrib/Archive/gtools/gtools_3.4.1.tar.gz\" -O \"gtools_3.4.1.tar.gz\"; fi"
+  - sudo sh -c "if [ '$R' = '3.0.2' ]; then Rscript -e 'if(!\"gtools\" %in% rownames(installed.packages())) { install.packages(\"gtools_3.4.1.tar.gz\", repo = NULL, type=\"source\") }'; fi"
+  - sh -c "if [ '$R' = '3.0.2' ]; then wget \"https://cran.r-project.org/src/contrib/Archive/gdata/gdata_2.13.3.tar.gz\" -O \"gdata_2.13.3.tar.gz\"; fi"
+  - sudo sh -c "if [ '$R' = '3.0.2' ]; then Rscript -e 'if(!\"gdata\" %in% rownames(installed.packages())) { install.packages(\"gdata_2.13.3.tar.gz\", repo = NULL, type="source") }'; fi"
+  - sh -c "if [ '$R' = '3.0.2' ]; then wget \"https://cran.r-project.org/src/contrib/bitops_1.0-6.tar.gz\" -O \"bitops_1.0-6.tar.gz\"; fi"
+  - sudo sh -c "if [ '$R' = '3.0.2' ]; then Rscript -e 'if(!\"bitops\" %in% rownames(installed.packages())) { install.packages(\"bitops_1.0-6.tar.gz\", repo = NULL, type="source") }'; fi"
+  - sh -c "if [ '$R' = '3.0.2' ]; then wget \"https://cran.r-project.org/src/contrib/Archive/caTools/caTools_1.17.tar.gz\" -O \"caTools_1.17.tar.gz\"; fi"
+  - sudo sh -c "if [ '$R' = '3.0.2' ]; then Rscript -e 'if(!\"caTools\" %in% rownames(installed.packages())) { install.packages(\"caTools_1.17.tar.gz\", repo = NULL, type="source") }'; fi"
+  - sh -c "if [ '$R' = '3.0.2' ]; then wget \"https://cran.r-project.org/src/contrib/Archive/gplots/gplots_2.14.1.tar.gz\" -O \"gplots_2.14.1.tar.gz\"; fi"
+  - sudo sh -c "if [ '$R' = '3.0.2' ]; then Rscript -e 'if(!\"gplots\" %in% rownames(installed.packages())) { install.packages(\"gplots_2.14.1.tar.gz\", repo = NULL, type="source") }'; fi"
+  - sh -c "if [ '$R' = '3.0.2' ]; then wget \"https://cran.r-project.org/src/contrib/Archive/Rcpp/Rcpp_0.11.2.tar.gz\" -O \"Rcpp_0.11.2.tar.gz\"; fi"
+  - sudo sh -c "if [ '$R' = '3.0.2' ]; then Rscript -e 'if(!\"Rcpp\" %in% rownames(installed.packages())) { install.packages(\"Rcpp_0.11.2.tar.gz\", repo = NULL, type="source") }'; fi"
+  - sh -c "if [ '$R' = '3.0.2' ]; then wget \"https://cran.r-project.org/src/contrib/Archive/plyr/plyr_1.8.1.tar.gz\" -O \"plyr_1.8.1.tar.gz\"; fi"
+  - sudo sh -c "if [ '$R' = '3.0.2' ]; then Rscript -e 'if(!\"plyr\" %in% rownames(installed.packages())) { install.packages(\"plyr_1.8.1.tar.gz\", repo = NULL, type="source") }'; fi"
+  - sh -c "if [ '$R' = '3.0.2' ]; then wget \"https://cran.r-project.org/src/contrib/Archive/digest/digest_0.6.4.tar.gz\" -O \"digest_0.6.4.tar.gz\"; fi"
+  - sudo sh -c "if [ '$R' = '3.0.2' ]; then Rscript -e 'if(!\"digest\" %in% rownames(installed.packages())) { install.packages(\"digest_0.6.4.tar.gz\", repo = NULL, type="source") }'; fi"
+  - sh -c "if [ '$R' = '3.0.2' ]; then wget \"https://cran.r-project.org/src/contrib/Archive/gtable/gtable_0.1.2.tar.gz\" -O \"gtable_0.1.2.tar.gz\"; fi"
+  - sudo sh -c "if [ '$R' = '3.0.2' ]; then Rscript -e 'if(!\"gtable\" %in% rownames(installed.packages())) { install.packages(\"gtable_0.1.2.tar.gz\", repo = NULL, type="source") }'; fi"
+  - sh -c "if [ '$R' = '3.0.2' ]; then wget \"https://cran.r-project.org/src/contrib/Archive/stringr/stringr_0.6.2.tar.gz\" -O \"stringr_0.6.2.tar.gz\"; fi"
+  - sudo sh -c "if [ '$R' = '3.0.2' ]; then Rscript -e 'if(!\"stringr\" %in% rownames(installed.packages())) { install.packages(\"stringr_0.6.2.tar.gz\", repo = NULL, type="source") }'; fi"
+  - sh -c "if [ '$R' = '3.0.2' ]; then wget \"https://cran.r-project.org/src/contrib/Archive/reshape2/reshape2_1.4.tar.gz\" -O \"reshape2_1.4.tar.gz\"; fi"
+  - sudo sh -c "if [ '$R' = '3.0.2' ]; then Rscript -e 'if(!\"reshape2\" %in% rownames(installed.packages())) { install.packages(\"reshape2_1.4.tar.gz\", repo = NULL, type="source") }'; fi"
+  - sh -c "if [ '$R' = '3.0.2' ]; then wget \"https://cran.r-project.org/src/contrib/Archive/RColorBrewer/RColorBrewer_1.0-5.tar.gz\" -O \"RColorBrewer_1.0-5.tar.gz\"; fi"
+  - sudo sh -c "if [ '$R' = '3.0.2' ]; then Rscript -e 'if(!\"RColorBrewer\" %in% rownames(installed.packages())) { install.packages(\"RColorBrewer_1.0-5.tar.gz\", repo = NULL, type="source") }'; fi"
+  - sh -c "if [ '$R' = '3.0.2' ]; then wget \"https://cran.r-project.org/src/contrib/dichromat_2.0-0.tar.gz\" -O \"dichromat_2.0-0.tar.gz\"; fi"
+  - sudo sh -c "if [ '$R' = '3.0.2' ]; then Rscript -e 'if(!\"dichromat\" %in% rownames(installed.packages())) { install.packages(\"dichromat_2.0-0.tar.gz\", repo = NULL, type="source") }'; fi"
+  - sh -c "if [ '$R' = '3.0.2' ]; then wget \"https://cran.r-project.org/src/contrib/Archive/colorspace/colorspace_1.2-4.tar.gz\" -O \"colorspace_1.2-4.tar.gz\"; fi"
+  - sudo sh -c "if [ '$R' = '3.0.2' ]; then Rscript -e 'if(!\"colorspace\" %in% rownames(installed.packages())) { install.packages(\"colorspace_1.2-4.tar.gz\", repo = NULL, type="source") }'; fi"
+  - sh -c "if [ '$R' = '3.0.2' ]; then wget \"https://cran.r-project.org/src/contrib/Archive/munsell/munsell_0.4.2.tar.gz\" -O \"munsell_0.4.2.tar.gz\"; fi"
+  - sudo sh -c "if [ '$R' = '3.0.2' ]; then Rscript -e 'if(!\"munsell\" %in% rownames(installed.packages())) { install.packages(\"munsell_0.4.2.tar.gz\", repo = NULL, type="source") }'; fi"
+  - sh -c "if [ '$R' = '3.0.2' ]; then wget \"https://cran.r-project.org/src/contrib/Archive/labeling/labeling_0.2.tar.gz\" -O \"labeling_0.2.tar.gz\"; fi"
+  - sudo sh -c "if [ '$R' = '3.0.2' ]; then Rscript -e 'if(!\"labeling\" %in% rownames(installed.packages())) { install.packages(\"labeling_0.2.tar.gz\", repo = NULL, type="source") }'; fi"
+  - sh -c "if [ '$R' = '3.0.2' ]; then wget \"https://cran.r-project.org/src/contrib/Archive/scales/scales_0.2.4.tar.gz\" -O \"scales_0.2.4.tar.gz\"; fi"
+  - sudo sh -c "if [ '$R' = '3.0.2' ]; then Rscript -e 'if(!\"scales\" %in% rownames(installed.packages())) { install.packages(\"scales_0.2.4.tar.gz\", repo = NULL, type="source") }'; fi"
+  - sh -c "if [ '$R' = '3.0.2' ]; then wget \"https://cran.r-project.org/src/contrib/Archive/proto/proto_0.3-10.tar.gz\" -O \"proto_0.3-10.tar.gz\"; fi"
+  - sudo sh -c "if [ '$R' = '3.0.2' ]; then Rscript -e 'if(!\"proto\" %in% rownames(installed.packages())) { install.packages(\"proto_0.3-10.tar.gz\", repo = NULL, type="source") }'; fi"
+  - sh -c "if [ '$R' = '3.0.2' ]; then wget \"https://cran.r-project.org/src/contrib/Archive/ggplot2/ggplot2_1.0.0.tar.gz\" -O \"ggplot2_1.0.0.tar.gz\"; fi"
+  - sudo sh -c "if [ '$R' = '3.0.2' ]; then Rscript -e 'if(!\"ggplot2\" %in% rownames(installed.packages())) { install.packages(\"ggplot2_1.0.0.tar.gz\", repo = NULL, type="source") }'; fi"
+  - sh -c "if [ '$R' = '3.0.2' ]; then wget \"https://cran.r-project.org/src/contrib/Archive/gridExtra/gridExtra_0.9.1.tar.gz\" -O \"gridExtra_0.9.1.tar.gz\"; fi"
+  - sudo sh -c "if [ '$R' = '3.0.2' ]; then Rscript -e 'if(!\"gridExtra\" %in% rownames(installed.packages())) { install.packages(\"gridExtra_0.9.1.tar.gz\", repo = NULL, type="source") }'; fi"
+  - sh -c "if [ '$R' = '3.0.2' ]; then wget \"https://cran.r-project.org/src/contrib/psy_1.1.tar.gz\" -O \"psy_1.1.tar.gz\"; fi"
+  - sudo sh -c "if [ '$R' = '3.0.2' ]; then Rscript -e 'if(!\"psy\" %in% rownames(installed.packages())) { install.packages(\"psy_1.1.tar.gz\", repo = NULL, type="source") }'; fi"
   - sudo sh -c "rm /usr/lib/R/bin/Rserve"
   - sudo sh -c "rm /usr/lib/R/bin/Rserve.dbg"
   - sudo sh -c "ln -s /usr/lib/R/site-library/Rserve/libs/Rserve /usr/lib/R/bin/Rserve"
